Video wallpaper addet to homepage: issues width not auto-fit, too wide video?

--- a/Bournonvilles.7.3.5/Css/customCss.css
+++ b/Bournonvilles.7.3.5/Css/customCss.css
@@ -1,5 +1,109 @@
 ﻿body {
+    padding-top: 80px;
+    min-height: 2000px;
 }
+.img-responsive {
+    margin: 0px auto;
+}
+.h1 {
+    color: #220B0A;
+    font-family: 'RosewoodStd-Regular';
+}
+@font-face {
+    font-family: 'RosewoodStd-Regular';
+    src: url('../fonts/RosewoodStd-Regular.otf') format('opentype');
+}
+.h2 {
+    color: #220B0A;
+    font-family: 'ANDERSON THUNDERBIRDS ARE GO!';
+}
+@font-face {
+    font-family: 'ANDERSON THUNDERBIRDS ARE GO!';
+    src: url('../fonts/ANDERSON THUNDERBIRDS ARE GO!.TTF') format('truetype');
+}
+.p {
+    color: #220B0A;
+}
+.a {
+    color: #220B0A;
+}
+html, body {
+    width: 100%;
+    height: 100%
+}
+#video-wallpaper {
+    display: block;
+    position: relative;
+    width: auto;
+    height: auto;
+    padding: 100px 0;
+    min-height: 100%;
+    min-width: 100% !important;
+    background: no-repeat center center;
+    background-attachment: scroll;
+    background-color: #220b0a;
+    background-size: cover;
+}
+/* NavBar */
+.navbar:before {
+    display:block;
+    width: 100%;
+    position:absolute;
+    background: #a0522d;
+    top:0;
+    z-index:-1;
+    text-align: center;
+}
+.navbar:after {
+    content: url('../media/logoTransparant_black_sm.png');
+    padding-left: 5px;
+    padding-top: 5px;
+    display:block;
+    height: 75px;
+    position: absolute;
+    background: #a0522d;
+    top: 0;
+    z-index: 1;
+/*Eclipse element*/
+    border-radius: 50%;
+    width: 175px;
+    height: 90px;
+    background-color: #a0522d;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+}
+.navbar {
+    display: block;
+    background-color: #a0522d;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    margin-bottom: 0px;
+    padding: 30px 15px;
+    -webkid-transition: all 0.5s;
+    transition: all 0.5s;
+}
+.navbar li a:hover {
+    background-color: #a52a2a;
+}
+.navbar a {
+    color: #220B0A;
+    font-family: 'ANDERSON THUNDERBIRDS ARE GO!';
+    font-size: 28px;
+}
+.icon-bar {
+    background-color: #220B0A;
+    border-color: #220B0A;
+}
+/*.navbar img {
+    position: absolute;
+    margin: 0px auto;
+}
+header {
+    position: relative;
+}*/
+/* NavBar dropdown*/
 .dropdown-submenu {
     position: relative;
 }
@@ -34,4 +138,14 @@
 
 .dropdown-submenu.pull-left {
     float: none;
+}
+/* Navbar Animation */
+.cbp-af-header-shrink {
+    padding-top: 2px;
+    padding-bottom: 2px;
+    opacity: 0.9;
+}
+.fill-screen {
+    background-size: cover;
+    background-position: center;
 }
